# slack-coder

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  README_ZH.md  SECURITY.md  install.ps1  install.sh  pyproject.toml
config/: __init__.py  paths.py  v2_compat.py  v2_config.py
core/: controller.py  diff_parser.py  gist_service.py  update_checker.py
core/handlers/: command_handlers.py  message_handler.py  session_handler.py  settings_handler.py
docs/: AI_SETUP.md  CLI.md  CLI_ZH.md  CODEX_SETUP.md  DEV_RESTORE.md  SLACK_SETUP.md  SLACK_SETUP_ZH.md
modules/: claude_client.py  settings_manager.py
modules/agents/: base.py  claude_agent.py  codex_agent.py
modules/agents/opencode/: agent.py  client_manager.py  server.py  session.py
modules/i18n/: __init__.py  en.json  zh.json
modules/im/: base.py  slack.py
tests/: test_diff_parser.py
ui/src/components/steps/: AgentDetection.tsx
ui/src/i18n/: en.json  zh.json
vibe/: __init__.py  api.py  cli.py  runtime.py
vibe/templates/: slack_manifest.json
