[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "slack-coder"
dynamic = ["version"]
description = "Your AI coding army, commanded from Slack - enhanced OpenCode support with Chinese localization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "FL-Penly", email = "975638987@qq.com" }
]
keywords = ["slack", "ai", "agent", "claude", "opencode", "codex", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "claude-code-sdk>=0.0.25",
    "anyio>=4.0.0",
    "slack-sdk>=3.26.0",
    "aiohttp>=3.8.0",
    "markdown_to_mrkdwn>=0.2.0",
    "typing_extensions>=4.12.2",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/FL-Penly/slack-coder"
Repository = "https://github.com/FL-Penly/slack-coder"
Documentation = "https://github.com/FL-Penly/slack-coder#readme"
Issues = "https://github.com/FL-Penly/slack-coder/issues"

[project.scripts]
slack-coder = "vibe.cli:main"
vibe = "vibe.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "vibe/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["vibe", "config", "core", "modules"]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "vibe/service_main.py"

[tool.hatch.build.targets.sdist]
include = [
    "vibe/**",
    "config/**",
    "core/**",
    "modules/**",
    "main.py",
    "README.md",
    "LICENSE",
]
